# MNIST

./: .gitignore  CMakeLists.txt  MNISTDataset.cpp  MNISTDataset.hpp  createDataset  main.cpp
src/: CMakeLists.txt  MNISTDataset.cpp  MNISTDataset.hpp  MNISTImage.cpp  MNISTImage.hpp  SimpleNN.cpp  SimpleNN.hpp  SimpleNNLayer.hpp  main.cpp
src/neural/: CMakeLists.txt  SimpleNN.cpp  SimpleNN.hpp  SimpleNNLayer.hpp
src/test/: CMakeLists.txt  test.cc  test.hpp
